<resources>
    <string name="app_name">ViveEko Consumidor</string>
    <string name="edit_rut">Ingrese su rut</string>
    <string name="edit_password">Ingrese su contraseña</string>
    <string name="login">Ingresar</string>
    <string name="signup">Registrarse</string>
    <string name="company">Empresa</string>
    <string name="preferences">Preferencias</string>

    <string name="password">Contraseña</string>
    <string name="userName">Nombre de usuario</string>
    <string name="firstName">Nombre</string>
    <string name="lasttName">Apellido</string>
    <string name="gender">Género</string>
    <string name="commune">Comuna</string>
    <string name="email">Correo electrónico</string>
    <string name="phone">Teléfono</string>
    <string name="title_activity_login2">Sign in</string>

    <string name="QrReader">Lector QR</string>
    <string name="button_consumeqr">Consumir QR</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_index">Inicio</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_activity_voucher_info">Información de ticket</string>
</resources>
