<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matthew.consumerapp.LoginActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/logo"
        android:id="@+id/imageView17"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="11dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="11dp" />

    <ImageView
        android:layout_height="0dp"
        android:layout_width="36dp"
        android:src="@drawable/user"
        android:layout_marginStart="48dp"
        android:id="@+id/imageView16"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/txtRut"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtRut"
        android:layout_marginLeft="48dp" />

    <ImageView
        android:layout_height="42dp"
        android:layout_width="0dp"
        android:src="@drawable/password"
        android:id="@+id/imageView15"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/imageView16"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageView16" />

    <Button
        android:layout_height="0dp"
        android:layout_width="115dp"
        android:id="@+id/btnIngresar"
        android:text="@string/login"
        android:onClick="login"
        android:textColor="@drawable/button_text_color"
        android:layout_marginStart="21dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnRegistrar"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageView15"
        android:layout_marginLeft="21dp" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/btnRegistrar"
        android:text="@string/signup"
        android:onClick="signup"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_size_standar"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/btnIngresar"
        android:layout_marginLeft="8dp" />

    <EditText
        android:layout_height="42dp"
        android:layout_width="0dp"
        android:id="@+id/txtRut"
        android:hint="@string/edit_rut"
        android:textSize="@dimen/text_size_standar"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="54dp"
        app:layout_constraintRight_toRightOf="@+id/txtPassword"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageView17"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="54dp" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/txtPassword"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:textSize="@dimen/text_size_standar"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="284dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView15" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp" />

</android.support.constraint.ConstraintLayout>
